complete first e2e test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="center-div">
   <mat-toolbar color="primary">
-    <button mat-icon-button [routerLink]="['/']">
+    <button mat-icon-button [routerLink]="['/']" data-cy="homeBtn">
       <mat-icon>home</mat-icon>
     </button>
     Team Builder
