--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -2,11 +2,12 @@
     <mat-card-content>
         <mat-form-field fxFlex="100%">
             <mat-label>Message</mat-label>
-            <textarea matInput [(ngModel)]="text"></textarea>
+            <textarea matInput [(ngModel)]="text" data-cy="messageInput"></textarea>
         </mat-form-field>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-raised-button color="primary" (click)="sendMessage()" [disabled]="!(user && text)">
+        <button mat-raised-button color="primary" (click)="sendMessage()" [disabled]="!(user && text)"
+            data-cy="sendMessageBtn">
             <mat-icon inline=true>send</mat-icon>
             SEND
         </button>
