--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,7 +1,7 @@
 <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
 <mat-card>
     <mat-card-header>
-        <mat-card-title>{{eventTitle ? eventTitle : "New Event"}}</mat-card-title>
+        <mat-card-title data-cy="eventCardTitle">{{eventTitle ? eventTitle : "New Event"}}</mat-card-title>
     </mat-card-header>
     <mat-card-content [ngSwitch]="isOwner">
         <div *ngSwitchCase="true">
